tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.error
error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:52:165
   |
52 | ...eft: Box::new(Tree::Node { value: 3, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()), right: Box::new(Tree::N...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:52:197
   |
52 | ...: 3, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()), right: Box::new(Tree::Node { value: -2, left: Box::new(...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:52:279
   |
52 | ...ht: Box::new(Tree::Node { value: -2, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()) }.clone()), right: Box::...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:52:311
   |
52 | ... -2, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()) }.clone()), right: Box::new(Tree::Node { value: 2, left:...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:52:403
   |
52 | ...ght: Box::new(Tree::Node { value: 2, left: Box::new(Empty.clone()), right: Box::new(Tree::Node { value: 1, left: Box::new(Empty.clone(...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:52:473
   |
52 | ...ght: Box::new(Tree::Node { value: 1, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()) }.clone()) }.clone()), r...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:52:505
   |
52 | ...: 1, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()) }.clone()) }.clone()), right: Box::new(Tree::Node { valu...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:52:609
   |
52 | ...ht: Box::new(Tree::Node { value: -3, left: Box::new(Empty.clone()), right: Box::new(Tree::Node { value: 11, left: Box::new(Empty.clone...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:52:680
   |
52 | ...ht: Box::new(Tree::Node { value: 11, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()) }.clone()) }
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:52:712
   |
52 | ... 11, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()) }.clone()) }
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:55:165
   |
55 | ...eft: Box::new(Tree::Node { value: 3, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()), right: Box::new(Tree::N...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:55:197
   |
55 | ...: 3, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()), right: Box::new(Tree::Node { value: -2, left: Box::new(...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:55:279
   |
55 | ...ht: Box::new(Tree::Node { value: -2, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()) }.clone()), right: Box::...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:55:311
   |
55 | ... -2, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()) }.clone()), right: Box::new(Tree::Node { value: 2, left:...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:55:403
   |
55 | ...ght: Box::new(Tree::Node { value: 2, left: Box::new(Empty.clone()), right: Box::new(Tree::Node { value: 1, left: Box::new(Empty.clone(...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:55:473
   |
55 | ...ght: Box::new(Tree::Node { value: 1, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()) }.clone()) }.clone()), r...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:55:505
   |
55 | ...: 1, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()) }.clone()) }.clone()), right: Box::new(Tree::Node { valu...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:55:609
   |
55 | ...ht: Box::new(Tree::Node { value: -3, left: Box::new(Empty.clone()), right: Box::new(Tree::Node { value: 10, left: Box::new(Empty.clone...
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:55:680
   |
55 | ...ht: Box::new(Tree::Node { value: 10, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()) }.clone()) }
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

error[E0425]: cannot find value `Empty` in this scope
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:55:712
   |
55 | ... 10, left: Box::new(Empty.clone()), right: Box::new(Empty.clone()) }.clone()) }.clone()) }
   |                                                        ^^^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
2  + use std::num::IntErrorKind::Empty;
   |
2  + use std::sync::mpsc::TryRecvError::Empty;
   |
2  + use Tree::Empty;
   |

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:47:2
   |
47 | };
   |  ^ help: remove this semicolon
   |
   = note: `#[warn(redundant_semicolons)]` on by default

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:50:2
   |
50 | };
   |  ^ help: remove this semicolon

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:53:2
   |
53 | };
   |  ^ help: remove this semicolon

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:56:2
   |
56 | };
   |  ^ help: remove this semicolon

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:63:2
   |
63 | };
   |  ^ help: remove this semicolon

warning: unnecessary parentheses around match arm expression
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:46:83
   |
46 | ...: r } => ((if ((current + *v) == target) { 1 } else { 0 } + dfs(l, target, (current + *v))) + dfs(r, target, (current + *v))), }
   |             ^                                                                                                                  ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
46 -     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((if ((current + *v) == target) { 1 } else { 0 } + dfs(l, target, (current + *v))) + dfs(r, target, (current + *v))), }
46 +     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => (if ((current + *v) == target) { 1 } else { 0 } + dfs(l, target, (current + *v))) + dfs(r, target, (current + *v)), }
   |

warning: unnecessary parentheses around `if` condition
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:46:88
   |
46 |     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((if ((current + *v) == target) { 1 } else { 0 } + dfs(...
   |                                                                                        ^                        ^
   |
help: remove these parentheses
   |
46 -     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((if ((current + *v) == target) { 1 } else { 0 } + dfs(l, target, (current + *v))) + dfs(r, target, (current + *v))), }
46 +     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((if (current + *v) == target { 1 } else { 0 } + dfs(l, target, (current + *v))) + dfs(r, target, (current + *v))), }
   |

warning: unnecessary parentheses around function argument
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:46:149
   |
46 | ...(current + *v) == target) { 1 } else { 0 } + dfs(l, target, (current + *v))) + dfs(r, target, (current + *v))), }
   |                                                                ^            ^
   |
help: remove these parentheses
   |
46 -     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((if ((current + *v) == target) { 1 } else { 0 } + dfs(l, target, (current + *v))) + dfs(r, target, (current + *v))), }
46 +     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((if ((current + *v) == target) { 1 } else { 0 } + dfs(l, target, current + *v)) + dfs(r, target, (current + *v))), }
   |

warning: unnecessary parentheses around function argument
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:46:183
   |
46 | ...se { 0 } + dfs(l, target, (current + *v))) + dfs(r, target, (current + *v))), }
   |                                                                ^            ^
   |
help: remove these parentheses
   |
46 -     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((if ((current + *v) == target) { 1 } else { 0 } + dfs(l, target, (current + *v))) + dfs(r, target, (current + *v))), }
46 +     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((if ((current + *v) == target) { 1 } else { 0 } + dfs(l, target, (current + *v))) + dfs(r, target, current + *v)), }
   |

warning: unnecessary parentheses around match arm expression
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:49:83
   |
49 | ...left: l, value: v, right: r } => ((dfs(node, target, 0) + path_sum(l, target)) + path_sum(r, target)), }
   |                                     ^                                                                  ^
   |
help: remove these parentheses
   |
49 -     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((dfs(node, target, 0) + path_sum(l, target)) + path_sum(r, target)), }
49 +     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => (dfs(node, target, 0) + path_sum(l, target)) + path_sum(r, target), }
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:66:28
   |
66 |     let duration_us: i64 = ((_end - _start) / 1000);
   |                            ^                      ^
   |
help: remove these parentheses
   |
66 -     let duration_us: i64 = ((_end - _start) / 1000);
66 +     let duration_us: i64 = (_end - _start) / 1000;
   |

error[E0170]: pattern binding `Empty` is named the same as one of the variants of the type `Tree`
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:46:25
   |
46 |     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((if ((current + *v) == target) { 1 } else { 0 } + dfs(...
   |                         ^^^^^ help: to match on the variant, qualify the path: `Tree::Empty`
   |
   = note: `#[deny(bindings_with_variant_name)]` on by default

warning: unreachable pattern
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:46:37
   |
46 |     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((if ((current + *v) == target) { 1 } else { 0 } + dfs(...
   |                         -----       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
   |                         |
   |                         matches any value
   |
   = note: `#[warn(unreachable_patterns)]` on by default

warning: unused variable: `Empty`
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:46:25
   |
46 |     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((if ((current + *v) == target) { 1 } else { 0 } + dfs(...
   |                         ^^^^^ help: if this is intentional, prefix it with an underscore: `_Empty`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:45:25
   |
45 |     fn dfs(node: &Tree, mut target: i64, mut current: i64) -> i64 {
   |                         ----^^^^^^
   |                         |
   |                         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:45:42
   |
45 |     fn dfs(node: &Tree, mut target: i64, mut current: i64) -> i64 {
   |                                          ----^^^^^^^
   |                                          |
   |                                          help: remove this `mut`

error[E0170]: pattern binding `Empty` is named the same as one of the variants of the type `Tree`
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:49:25
   |
49 |     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((dfs(node, target, 0) + path_sum(l, target)) + path_su...
   |                         ^^^^^ help: to match on the variant, qualify the path: `Tree::Empty`

warning: unreachable pattern
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:49:37
   |
49 |     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((dfs(node, target, 0) + path_sum(l, target)) + path_su...
   |                         -----       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
   |                         |
   |                         matches any value

warning: unused variable: `Empty`
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:49:25
   |
49 |     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((dfs(node, target, 0) + path_sum(l, target)) + path_su...
   |                         ^^^^^ help: if this is intentional, prefix it with an underscore: `_Empty`

warning: unused variable: `v`
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:49:66
   |
49 |     return match node { Empty => 0, Tree::Node { left: l, value: v, right: r } => ((dfs(node, target, 0) + path_sum(l, target)) + path_su...
   |                                                                  ^ help: if this is intentional, prefix it with an underscore: `_v`

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:48:30
   |
48 |     fn path_sum(node: &Tree, mut target: i64) -> i64 {
   |                              ----^^^^^^
   |                              |
   |                              help: remove this `mut`

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:58:9
   |
58 |     let mut tree1: Tree = sample_tree_one();
   |         ----^^^^^
   |         |
   |         help: remove this `mut`

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/algorithms/x/Rust/data_structures/binary_tree/binary_tree_path_sum.rs:61:9
   |
61 |     let mut tree2: Tree = sample_tree_two();
   |         ----^^^^^
   |         |
   |         help: remove this `mut`

error: aborting due to 22 previous errors; 21 warnings emitted

Some errors have detailed explanations: E0170, E0425.
For more information about an error, try `rustc --explain E0170`.
